# portfolio_optmization

portfolio_optimizer/: README.md  pyproject.toml
portfolio_optimizer/portfolio_optimizer/: app.py  main.py  test.py
portfolio_optimizer/portfolio_optimizer/in/: IBOV.csv
portfolio_optimizer/portfolio_optimizer/lib/: utils.py
