[tool.poetry]
name = "portfolio-optimizer"
version = "0.1.0"
description = ""
authors = ["elias-maciel <eliasfsilvamaciel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
yfinance = "^0.2.51"
matplotlib = "^3.10.0"
scipy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
